started getting result of ex1, start testing ex2

--- a/exercise2/Makefile
+++ b/exercise2/Makefile
@@ -6,22 +6,21 @@ MKL= -L${MKLROOT}/lib/intel64  -lmkl_intel_lp64 -lmkl_gnu_thread -lmkl_core -lgo
 ### OpenBLAS libraries 
 OPENBLASROOT=${OPENBLAS_ROOT}
 
-cpu: sgemm_mkl.x sgemm_obleas.x dgemm_mkl.x dgemm_oblas.x
+cpu: sgemm_mkl.x dgemm_mkl.x sgemm_oblas.x dgemm_oblas.x
 
 
-sgemm_mkl.x: gemm.c
+sgemm_mkl.x: my_gemm.c
 	gcc -DUSE_FLOAT -DMKL $^ -m64 -I${MKLROOT}/include $(MKL)  -o $@
 
-dgemm_mkl.x: gemm.c
-        gcc -DUSE_DOUBLE -DMKL $^ -m64 -I${MKLROOT}/include $(MKL)  -o $@
+dgemm_mkl.x: my_gemm.c
+	gcc -DUSE_DOUBLE -DMKL $^ -m64 -I${MKLROOT}/include $(MKL)  -o $@
 
-sgemm_oblas.x: gemm.c
+sgemm_oblas.x: my_gemm.c
 	gcc -DUSE_FLOAT -DOPENBLAS $^ -m64 -I${OPENBLASROOT}/include -L/${OPENBLASROOT}/lib -lopenblas -lpthread -o $@ -fopenmp
 
-dgemm_oblas.x: gemm.c
-        gcc -DUSE_DOUBLE -DOPENBLAS $^ -m64 -I${OPENBLASROOT}/include -L/${OPENBLASROOT}/lib -lopenblas -lpthread -o $@ -fopenmp
+dgemm_oblas.x: my_gemm.c
+	gcc -DUSE_DOUBLE -DOPENBLAS $^ -m64 -I${OPENBLASROOT}/include -L/${OPENBLASROOT}/lib -lopenblas -lpthread -o $@ -fopenmp
 
-#gemm_blis.x: gemm.c
-#	gcc -DUSE_DOUBLE  -DBLIS $^ -m64 -I${BLISROOT}/include/blis -L/${BLISROOT}/lib -o $@ -lpthread  -lblis -fopenmp -lm
+
 clean:
 	rm -rf *.x
